tests/toylang/neg/001368_mutation.toylang
program a = { var a : bool; program } .
